--- a/client/main.css
+++ b/client/main.css
@@ -1,12 +1,57 @@
 /*
 css here*/
 
+body {
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 400;
+}
+
 .container {
     width: 85%;
-    padding: 50px 0;
     margin: 0 auto;
+}
+
+.ant-layout-content {
+    background-color: white;
 }
 
 .ant-menu .ant-menu-item:last-child {
     float: right;
+}
+
+li {
+    list-style-type: none;
+}
+
+.intro__content {
+    padding: 50px 0;
+}
+
+.movie-card {
+    margin-bottom: 20px;
+}
+
+.movie-card p {
+    margin-bottom: 0.3rem;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3rem;
+}
+
+h2 {
+    display: inline-block;
+    margin-right: 15px;
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+#login-buttons a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.65);
 }
